--- a/css/styles-new-version.css
+++ b/css/styles-new-version.css
@@ -108,7 +108,7 @@ padding: 0;}
     clear:both;
     color: white;
 }
-.blue-container h3, .blue-container h2{
+.blue-container h1, .blue-container h3, .blue-container h2{
     color:white;
     
 }
@@ -152,7 +152,10 @@ padding: 0;}
     color: #003C6E;
     line-height: 25px;
 }
-
+.higlight-text{
+  font-size: 20px;
+  font-weight: 500;
+}
 .products .higlight-text {
     font-size: 20px;
     font-weight: 500;
@@ -226,23 +229,29 @@ padding: 0;}
     text-shadow: 1px 1px 0 rgba(0,0,0,.75);
 }
 .main-container{
-    background-color: #003C6E;
-    color: white;
+
     padding-bottom: 60px;
+    margin: 0 auto;
 }
 .main-container h1{
-    color: white;
     margin-bottom: 80px;
 }
 
-.main-container h2 {
-    color: white;
-}
 .main-container h1 span{
 font-size: 60%;
 }
-.main-container .row .col-md-12{
-    padding:45px 0;
+
+
+.container {
+  margin: 0 auto;
+}
+
+.button-container{
+  display: flex;
+  justify-content: center;
+}
+.button-container a {
+  width: auto;
 }
 /*
 Fade content bs-carousel with hero headers
@@ -300,15 +309,23 @@ Image credits: unsplash.com
 .container-fluid {
     background: white;
 }
+
+.is-mobile {
+  display: none;
+}
+.is-desktop {
+  display:block;
+}
+.table-responsive.is-mobile {
+  border: none;
+}
 @media (max-width: 1620px){
    .hero h2 {
     font-size: 4em;    
-
 } 
 p{
     font-size:15px;
 }
-
 .green-container p {
     font-size: 17px;
 }
@@ -323,12 +340,8 @@ h3 {
 }
 }
 @media (max-width:1200px){
-    .container-fluid > .navbar-header{
-        width:27%;
-    }
     .navbar {
     height: 57px;
-
 }
 }
 
@@ -412,13 +425,22 @@ h3 {
 /*          Media Queries       */
 /********************************/
 @media screen and (max-width: 980px){
-    .map-container ul {color: white;}  
     .navbar-toggle {flex-direction: column;
         float: left;
         max-width: 42px;
         margin-left: 16px;}  
      button::after {
         display: none;
+    }
+    .navbar-brand > img {
+      width: auto;
+      height: 100%;
+    }
+    .is-mobile {
+      display: block;
+    }
+    .is-desktop {
+      display:none;
     }
 }
 
@@ -521,16 +543,16 @@ display: inline-block;
 #deadSimpleLightbox img { max-width: 100%; padding-top: 15px; padding-bottom: 15px; cursor: pointer; }
 
 /* Overlay Style */
-#lightboxOverlay { position:fixed; top:0; left:0; width:100%; height:100%; background-color: rgba( 0,0,0, 0.7 ); text-align: center; }
-#lightboxOverlay h3 { color:#f3f3f3; }
+#lightboxOverlay { z-index:1000; position:fixed; top:0; left:0; width:100%; height:100%; background-color: rgba( 0,0,0, 0.7 ); text-align: center; }
+#lightboxOverlay p { color:#f3f3f3;font-size: 10px; }
 #lightboxOverlay .fa-times { position: absolute; right: 20px; top: 120px; font-size: 50px; cursor: pointer; }
-#lightboxOverlay img { margin-top: 45%; max-width: 80%; max-height:50%; }
+#lightboxOverlay img { margin-top: 45%; max-width: 100%; max-height:80%; }
 
 /* Responsiveness */
 @media screen and (min-width: 768px) {
 	#lightboxOverlay .fa-times { font-size: 30px; width: 50px; height: 50px; }
 	#lightboxOverlay .fa-times:before { line-height: 50px; }
-	#lightboxOverlay img { margin-top: 7%; max-height:80%; }
+	#lightboxOverlay img { margin-top: 15%; max-height:100%; }
 }
 .how-it-work .col-md-6{
         padding: 0 77px 0 77px;
@@ -693,7 +715,25 @@ display: inline-block;
 }
 
 .slider-lightbox-container {
-    position: relative;
+  position: relative;
+  height: 267px;
+  /* Match default min-height of #sliderLightbox */
+  display: flex;
+  align-items: stretch;
+  width: 100%;
+}
+#sliderLightbox {
+  min-height: 220px;
+  height: 100%;
+}
+@media (max-width: 600px) {
+  .slider-lightbox-container {
+    height: 140px;
+  }
+  #sliderLightbox {
+    min-height: 140px;
+    height: 100%;
+  }
 }
 
 #sliderLightbox {
@@ -827,3 +867,188 @@ display: inline-block;
     height: 200px;
   }
 }
+
+/* Responsive specs for mobile (div-based table replacement) */
+.specs-mobile {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+  overflow: hidden;
+  font-size: 1em;
+  margin-bottom: 16px;
+}
+.specs-mobile-header {
+  background: #003C6E;
+  color: #fff;
+  padding: 14px 16px;
+  text-align: center;
+}
+.specs-mobile-title {
+  font-weight: 600;
+  font-size: 1.1em;
+  letter-spacing: 0.5px;
+}
+.specs-mobile-row {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid #e5e5e5;
+  padding: 10px 16px;
+  align-items: flex-start;
+}
+.specs-mobile-row:last-child {
+  border-bottom: none;
+}
+.specs-mobile-label {
+  flex: 1 1 60%;
+  font-weight: 500;
+  color: #003C6E;
+  padding-right: 10px;
+  min-width: 120px;
+}
+.specs-mobile-value {
+  flex: 1 1 40%;
+  text-align: right;
+  color: #222;
+  font-weight: 400;
+  min-width: 80px;
+}
+@media (min-width: 768px) {
+  .specs-mobile { display: none; }
+}
+@media (max-width: 767px) {
+  .table-responsive.is-mobile table { display: none !important; }
+  .specs-mobile { display: flex; }
+}
+
+/* --- MEDIA QUERIES MOVED TO END OF FILE --- */
+/*
+All media queries from this file have been moved to the end and ordered by size for maintainability.
+*/
+/* --- START OF ORDERED MEDIA QUERIES --- */
+@media (max-width: 1620px){
+   .hero h2 {
+    font-size: 4em;    
+} 
+p{
+    font-size:15px;
+}
+.green-container p {
+    font-size: 17px;
+}
+h2 {
+    font-size: 40px;
+}
+h3 {
+    font-size: 27px;
+}
+.products .col-md-4 p {
+    font-size: 21px;
+}
+}
+@media (max-width:1200px){
+    .navbar {
+    height: 57px;
+}
+}
+@media screen and (max-width: 980px){
+    .navbar-toggle {flex-direction: column;
+        float: left;
+        max-width: 42px;
+        margin-left: 16px;}  
+     button::after {
+        display: none;
+    }
+    .navbar-brand > img {
+      width: auto;
+      height: 100%;
+    }
+    .navbar-default .navbar-brand {
+      width: auto;
+    }
+    h1{font-size: 40px;}
+    .hero h2 {
+      font-size: 3em;
+    }
+}
+@media screen and (min-width: 980px){
+    .hero { width: 980px; }    
+}
+@media screen and (max-width: 900px) {
+  #sliderLightbox li, #sliderLightbox li img {
+    max-width: 100%;
+    flex-basis: 33.33%;
+  }
+}
+@media (max-width: 767px) {
+  .row.align-items-center {
+    flex-direction: column !important;
+    margin-bottom: 24px;
+  }
+  .col-md-6.col-xs-12 {
+    width: 100%;
+    max-width: 100%;
+    display: block;
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 24px;
+  }
+  #maquina-destacada-1 .maquina-slider-wrapper {
+    min-height: 220px;
+    height: auto !important;
+  }
+  .maquina-title {
+    margin-bottom: 8px;
+    text-align: left;
+  }
+  .maquina-description {
+    padding: 0 8px;
+  }
+  .maquina-slider li img {
+    max-width: 100vw;
+    height: auto;
+  }
+  .table-responsive {
+    overflow-x: auto;
+  }
+  .table {
+    width: 100% !important;
+    font-size: 15px;
+  }
+}
+@media (max-width: 700px) {
+  .before-after-slider {
+    max-width: 100vw;
+    height: 200px;
+  }
+}
+@media screen and (max-width: 640px){
+    .hero h1 { font-size: 4em; }    
+}
+@media (max-width: 600px) {
+  #sliderLightbox {
+    max-width: 100vw;
+    min-height: 140px;
+  }
+  #sliderLightbox li, #sliderLightbox li img {
+    max-width: 100%;
+    flex-basis: 100%;
+  }
+  #sliderLightbox li img {
+    height: 100px;
+  }
+  .sliderLightbox-prev,
+  .sliderLightbox-next {
+    font-size: 1.5em;
+    width: 36px;
+    height: 36px;
+  }
+}
+@media screen and (min-width: 768px) {
+	#lightboxOverlay .fa-times { font-size: 30px; width: 50px; height: 50px; }
+	#lightboxOverlay .fa-times:before { line-height: 50px; }
+	#lightboxOverlay img { margin-top: 7%; max-height:80%; }
+}
+/* --- END OF ORDERED MEDIA QUERIES --- */
