--- a/css/styles-new-version.css
+++ b/css/styles-new-version.css
@@ -442,6 +442,12 @@ h3 {
     .is-desktop {
       display:none;
     }
+    .before-after-slider{
+      margin: 32px 0 5px;
+    }
+    .how-it-work img {
+width: 100%;
+    }
 }
 
 @media screen and (min-width: 980px){
@@ -544,8 +550,13 @@ display: inline-block;
 
 /* Overlay Style */
 #lightboxOverlay { z-index:1000; position:fixed; top:0; left:0; width:100%; height:100%; background-color: rgba( 0,0,0, 0.7 ); text-align: center; }
-#lightboxOverlay p { color:#f3f3f3;font-size: 10px; }
-#lightboxOverlay .fa-times { position: absolute; right: 20px; top: 120px; font-size: 50px; cursor: pointer; }
+#lightboxOverlay p { color:#f3f3f3;font-size: 11px; margin-top: 20px; }
+#lightboxOverlay .fa-times { position: absolute;
+  right: 30px;
+  top: 20px;
+  font-size: 30px;
+  cursor: pointer;
+  color: white;}
 #lightboxOverlay img { margin-top: 45%; max-width: 100%; max-height:80%; }
 
 /* Responsiveness */
@@ -728,10 +739,10 @@ display: inline-block;
 }
 @media (max-width: 600px) {
   .slider-lightbox-container {
-    height: 140px;
+    height: 160px;
   }
   #sliderLightbox {
-    min-height: 140px;
+    min-height: 160px;
     height: 100%;
   }
 }
@@ -739,8 +750,7 @@ display: inline-block;
 #sliderLightbox {
   position: relative;
   width: 100%;
-  max-width: 900px;
-  margin: 32px auto 24px auto;
+  max-width: 100%;
   padding: 0;
   list-style: none;
   min-height: 220px;
@@ -814,7 +824,7 @@ display: inline-block;
     flex-basis: 100%;
   }
   #sliderLightbox li img {
-    height: 100px;
+    height: 160px;
   }
   .sliderLightbox-prev,
   .sliderLightbox-next {
@@ -830,7 +840,7 @@ display: inline-block;
   width: 100%;
   max-width: 600px;
   height: 350px;
-  margin: 32px auto;
+  margin: 32px auto 5px;
   background: #eee;
 }
 .before-after-slider img {
@@ -858,8 +868,8 @@ display: inline-block;
 }
 .before-after-bar:hover,
 .before-after-bar:focus {
-  background: #005fa3;
-  outline: 2px solid #005fa3;
+  background: #333333;
+  outline: 1px solid #333333;
 }
 @media (max-width: 700px) {
   .before-after-slider {
@@ -972,6 +982,10 @@ h3 {
     .hero h2 {
       font-size: 3em;
     }
+    #sliderLightbox li img {
+      width: 95%;
+      margin-left: -3px;
+    }
 }
 @media screen and (min-width: 980px){
     .hero { width: 980px; }    
@@ -1037,7 +1051,7 @@ h3 {
     flex-basis: 100%;
   }
   #sliderLightbox li img {
-    height: 100px;
+    height: 160px;
   }
   .sliderLightbox-prev,
   .sliderLightbox-next {
